--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
+    "axios": "^1.11.0",
     "eslint": "^9.35.0",
     "nuxt": "^4.1.1",
     "vue": "^3.5.21",
