--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "eslint": "^9.35.0",
     "nuxt": "^4.1.1",
     "vue": "^3.5.21",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   }
 }
